--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
         <div class="card">
           <h3>Editing dan Format</h3>
-          <p>Kami bantu merapikan hasil ketikan Anda dengan standar akademik atau profesional.</p>
+          <p>Saya dapat bantu merapikan hasil ketikan Anda dengan standar akademik atau profesional.</p>
         </div>
       </div>
     </div>
@@ -166,7 +166,7 @@
 
   <!-- Kontak -->
   <section class="container">
-    <h2>Hubungi Kami</h2>
+    <h2>Hubungi Saya</h2>
 
     <!-- Alert container -->
     <div id="form-status"></div>
