--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     </div>
   </section>
 
-  <!-- Testimoni -->
+ <!-- <!-- Testimoni -->
   <section class="testimonials">
     <div class="container">
       <h2>Testimoni Klien</h2>
@@ -162,7 +162,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Kontak -->
   <section class="container">
