--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <!-- Alert container -->
     <div id="form-status"></div>
 
-    <form id="contact-form" action="https://formspree.io/f/mldnjryv" method="POST">
+    <form id="contact-form" action="https://hooks.zapier.com/hooks/catch/23307115/uymv6gi/" method="POST">
       <input type="text" name="name" placeholder="Nama Anda" required />
       <input type="email" name="email" placeholder="Email Anda" required />
       <textarea name="message" rows="5" placeholder="Pesan Anda" required></textarea>
