--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     
   <div id="form-status"></div>
 
-    <form id="contact-form" action="https://hooks.zapier.com/hooks/catch/23307115/uymv6gi/" method="POST">
+    <form id="contact-form" action="https://script.google.com/macros/s/AKfycbwsaTBFtDwTXhpFxWV_GZEmNHVHe-_KcVVPAV05kDYhuhripVGCkwVJuUalgLXShoHd/exec" method="POST">
       <input type="text" name="name" placeholder="Nama Anda" required />
       <input type="email" name="email" placeholder="Email Anda" required />
       <textarea name="message" rows="5" placeholder="Pesan Anda" required></textarea>
@@ -189,27 +189,34 @@
   </footer>
 
   <script>
-    const form = document.getElementById('contact-form');
-    const status = document.getElementById('form-status');
+  const form = document.getElementById('contact-form');
+  const status = document.getElementById('form-status');
 
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const data = new FormData(form);
-      const action = form.action;
-      const response = await fetch(action, {
+  form.addEventListener('submit', async (e) => {
+    e.preventDefault();
+    status.textContent = "Mengirim...";
+
+    try {
+      const response = await fetch(form.action, {
         method: 'POST',
-        body: data,
-        headers: { 'Accept': 'application/json' }
+        body: new FormData(form),
       });
 
-      if (response.ok) {
-        status.innerHTML = '<div class="alert alert-success">Pesan Anda berhasil dikirim!</div>';
-        form.reset();
-      } else {
-        status.innerHTML = '<div class="alert alert-error">Terjadi kesalahan. Silakan coba lagi.</div>';
-      }
-    });
-  </script>
+      const text = await response.text();
+      status.textContent = text;
+      form.reset();
+    } catch (error) {
+      status.textContent = "Terjadi kesalahan. Coba lagi.";
+    }
+  });
+
+  MailApp.sendEmail({
+  to: "deviyolanda901@gmail.com",
+  subject: "Pesan baru dari Contact Form",
+  body: "Nama: " + data.name + "\nEmail: " + data.email + "\nPesan: " + data.message
+});
+
+</script>
 
 </body>
 </html>
