--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     
   <div id="form-status"></div>
 
-    <form id="contact-form" action="https://script.google.com/macros/s/AKfycbwsaTBFtDwTXhpFxWV_GZEmNHVHe-_KcVVPAV05kDYhuhripVGCkwVJuUalgLXShoHd/exec" method="POST">
+    <form id="contact-form" action="https://script.google.com/macros/s/AKfycbzsr-U8hoGhWyahnkjBLQrViEGMr1bkFHluGJ7Gy5aV9SOgcRPEk21ZaB_xWiEJ_7WZ/exec" method="POST">
       <input type="text" name="name" placeholder="Nama Anda" required />
       <input type="email" name="email" placeholder="Email Anda" required />
       <textarea name="message" rows="5" placeholder="Pesan Anda" required></textarea>
@@ -189,34 +189,30 @@
   </footer>
 
   <script>
-  const form = document.getElementById('contact-form');
-  const status = document.getElementById('form-status');
+const form = document.getElementById('contact-form');
+const status = document.getElementById('form-status');
 
-  form.addEventListener('submit', async (e) => {
-    e.preventDefault();
-    status.textContent = "Mengirim...";
+form.addEventListener('submit', async (e) => {
+  e.preventDefault();
+  status.textContent = "Mengirim...";
 
-    try {
-      const response = await fetch(form.action, {
-        method: 'POST',
-        body: new FormData(form),
-      });
+  try {
+    await fetch(form.action, {
+      method: 'POST',
+      body: new FormData(form),
+      mode: "no-cors"
+    });
 
-      const text = await response.text();
-      status.textContent = text;
-      form.reset();
-    } catch (error) {
-      status.textContent = "Terjadi kesalahan. Coba lagi.";
-    }
-  });
-
-  MailApp.sendEmail({
-  to: "deviyolanda901@gmail.com",
-  subject: "Pesan baru dari Contact Form",
-  body: "Nama: " + data.name + "\nEmail: " + data.email + "\nPesan: " + data.message
+    status.textContent = "Pesan berhasil terkirim!";
+    form.reset();
+  } catch (error) {
+    status.textContent = "Terjadi kesalahan. Coba lagi.";
+    console.error(error);
+  }
 });
-
 </script>
+
+
 
 </body>
 </html>
